# vfs

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_third_party.bat  build_third_party_for_macos.sh  protoc.bat  protoc_for_macos.sh
include/vfs/: ab.h  clientfilesystem.h  ivirtualfilesystem.h  leveldbfilesystem.h  nameserver.h  object.pb.cc  object.pb.h  rollingchecksum.h  utils.h
proto/: object.proto
src/: clientfilesystem.cpp  leveldbfilesystem.cpp  nameserver.cpp  object.grpc.pb.cc  object.grpc.pb.h  rollingchecksum.cpp  utils.cpp
test/: nameservertest.cpp  rollingchecksumtest.cpp  vfscli.cpp  virtualfilesystemtest.cpp
